2011-01-13  John W. Eaton  <jwe@octave.org>

	* filemode.c: Use prototypes for function definitions.  Reorder
	functions to eliminate need for forward declarations.
	* filemode.h: New file.
	* file-stat.cc: Include filemode.h instead of using local extern
	declarations.
	* Makefile.am (INCS): Add filemode.h to the list.

	* lo-cutils.h: New file.
	(octave_qsort, octave_strcasecmp, octave_strncasecmp,
	octave_w32_library_search, octave_waitpid): Move decls here from
	lo-utils.h.
	* Makefile.am (INCS): Add lo-cutils.h to the list.
	* lo-utils.h: Include cutils.h.
	* lo-cutils.c: Include cutils.h.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* SparseCmplxQR.cc
	(SparseComplexQR::SparseComplexQR_rep::SparseComplexQR_rep):
	Correct order of member initialization.
	* SparseQR.cc (SparseQR::SparseQR_rep::SparseQR_rep): Likewise.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* oct-fftw.cc (octave_fftw_planner::octave_fftw_planner,
	octave_float_fftw_planner::octave_float_fftw_planner):
	Avoid duplicate initializations.  Correctly initialize RN to
	empty dim_vector.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse::Sparse): Initialize all data members in
	initialization lists.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* Array.cc (rec_permute_helper::rec_permute_helper,
	rec_index_helper::rec_index_helper,
	rec_resize_helper::rec_resize_helper): Initialize all data
	members in initialization lists.

	* Array.h, Array.cc (Array::Array): Initialize slice_data and
	slice_len in memeber initialization lists.
	(Array::~Array): Now virtual.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* oct-locbuf.h (octave_chunk_buffer::~octave_chunk_buffer):
	Now virtual.
	(class octave_local_buffer, class octave_chunk_buffer):
	Don't allow copying or assignment.

	* file-stat.h (base_file_stat::~base_file_stat):
	Now protected and virtual.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* base-lu.h (base_lu::base_lu): Initialize all data members in